--- a/unizin-parent/unizin-search/src/main/js/globals.scss
+++ b/unizin-parent/unizin-search/src/main/js/globals.scss
@@ -4,6 +4,14 @@
   font-family: $default_font;
   font-weight: 300;
 
+  fieldset {
+    min-width: 0;
+    width: 100%;
+    margin: 0;
+    padding: 1rem;
+    border: none;
+  }
+
   h2 {
     font-family: $default_font;
     font-size: 1rem;
