--- a/unizin-parent/unizin-search/src/main/resources/skin/resources/css/main.scss
+++ b/unizin-parent/unizin-search/src/main/resources/skin/resources/css/main.scss
@@ -16,7 +16,7 @@ article,
 section,
 main,
 header,
-navigation,
+nav,
 aside,
 footer,
 ul,
